--- a/style.css
+++ b/style.css
@@ -5,8 +5,29 @@ body {
     font-family: 'Comme', sans-serif;
     padding: 0;
     margin: 0;
+    min-height: 300px;
 }
 
+::selection {
+    background-color: white;
+    color: black;
+}
+
+.cursor {
+    position: fixed;
+    border-radius: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    pointer-events: none;
+    left: -100px;
+    top: 50%;
+    mix-blend-mode: difference;
+    background-color: white;
+    z-index: 10000;
+    height: 23px;
+    width: 23px;
+    transition: all 125ms ease-out;
+  }
+  
 section {
     display: grid;
     place-items: center;
