--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Comme:wght@200&display=swap');
 body {
     background-color: #131316;
-    color: #ffffff;
+    color: #ecece9;
     font-family: 'Comme', sans-serif;
     padding: 0;
     margin: 0;
@@ -9,8 +9,8 @@ body {
 }
 
 ::selection {
-    background-color: white;
-    color: black;
+    background-color: #ecece9;
+    color: #131316;
 }
 
 .cursor {
@@ -20,8 +20,8 @@ body {
     pointer-events: none;
     left: -100px;
     top: 50%;
-    mix-blend-mode: difference;
-    background-color: white;
+    mix-blend-mode: exclusion;
+    background-color: #ecece9;
     z-index: 10000;
     height: 23px;
     width: 23px;
@@ -33,6 +33,42 @@ section {
     place-items: center;
     align-content: center;
     min-height: 100vh;
+}
+
+.animate-charcter
+{
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #ff0000 0%,
+    #ff9a00 10%,
+    #d1de21 20%,
+    #4fdc4a 30%, 
+    #3fdad8 40%,
+    #2fc9e2 50%,
+    #1c7fee 60%,
+    #5f15f2 70%,
+    #ba0cf8 80%,
+    #fb07d9 90%,
+    #ff0000 100%
+  );
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: #ffffff;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 2s linear infinite;
+    display: inline-block;
+    font-size: 50px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
 }
 
 .hidden {
@@ -78,8 +114,24 @@ section {
     transition-delay: 400ms;
 }
 
-
 .latetext:nth-child() {
     transition-delay: 2s;
 }
 
+.bottomdiv {
+    background: #000000cb;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    margin: 0 auto;
+    margin-top: 1%;
+}
+
+.icon img{
+    position: relative;
+    width: 30px;
+    height: 30px;
+    margin-left: 15px;
+    margin: 10px;
+}
