--- a/style.css
+++ b/style.css
@@ -1,68 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Comme:wght@200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comme:wght@200&display=swap");
 body {
-    background-color: #131316;
-    color: #ecece9;
-    font-family: 'Comme', sans-serif;
-    padding: 0;
-    margin: 0;
-    min-height: 300px;
+  background-color: #131316;
+  color: #ecece9;
+  font-family: "Comme", sans-serif;
+  padding: 0;
+  margin: 0;
+  min-height: 300px;
+}
+
+h3::-moz-selection {
+  background: rgba(255, 255, 255, 0.158);
+}
+
+h3::selection {
+  background: rgba(255, 255, 255, 0.158);
+}
+
+::-moz-selection {
+  background-color: #ecece9;
+  color: #131316;
 }
 
 ::selection {
-    background-color: #ecece9;
-    color: #131316;
+  background-color: #ecece9;
+  color: #131316;
 }
 
 .cursor {
-    position: fixed;
-    border-radius: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    pointer-events: none;
-    left: -100px;
-    top: 50%;
-    mix-blend-mode: exclusion;
-    background-color: #ecece9;
-    z-index: 10000;
-    height: 23px;
-    width: 23px;
-    transition: all 125ms ease-out;
-  }
-  
-section {
-    display: grid;
-    place-items: center;
-    align-content: center;
-    min-height: 100vh;
+  position: fixed;
+  border-radius: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  pointer-events: none;
+  left: -100px;
+  top: 50%;
+  mix-blend-mode: exclusion;
+  background-color: #ecece9;
+  z-index: 10000;
+  height: 23px;
+  width: 23px;
+  transition: all ease-out;
 }
 
-.animate-charcter
-{
-   text-transform: uppercase;
-  background-image: linear-gradient(
-    -225deg,
-    #ff0000 0%,
-    #ff9a00 10%,
-    #d1de21 20%,
-    #4fdc4a 30%, 
-    #3fdad8 40%,
-    #2fc9e2 50%,
-    #1c7fee 60%,
-    #5f15f2 70%,
-    #ba0cf8 80%,
-    #fb07d9 90%,
-    #ff0000 100%
-  );
-    background-size: auto auto;
-    background-clip: border-box;
-    background-size: 200% auto;
-    color: #ffffff;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: textclip 2s linear infinite;
-    display: inline-block;
-    font-size: 50px;
+section {
+  display: grid;
+  place-items: center;
+  align-content: center;
+  min-height: 100vh;
+}
+
+.animate-charcter {
+  text-transform: uppercase;
+  background-image: linear-gradient(-225deg, #ff0000 0%, #ff9a00 10%, #d1de21 20%, #4fdc4a 30%, #3fdad8 40%, #2fc9e2 50%, #1c7fee 60%, #5f15f2 70%, #ba0cf8 80%, #fb07d9 90%, #ff0000 100%);
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #ffffff;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+  font-size: 50px;
 }
 
 @keyframes textclip {
@@ -70,68 +69,62 @@ section {
     background-position: 200% center;
   }
 }
-
 .hidden {
-    opacity: 0;
-    filter: blue(5px);
-    transform: translateX(-100%);
-    transition: all 1s;
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100%);
+  transition: all 1s;
 }
 
 .show {
-    opacity: 1;
-    filter: blur(0);
-    transform: translateX(0);
+  opacity: 1;
+  filter: blur(0);
+  transform: translateX(0);
 }
 
-@media(prefers-reduced-motion) {
-    .hidden {
-        transition: none;
-    }
+@media (prefers-reduced-motion) {
+  .hidden {
+    transition: none;
+  }
 }
-
 .logos {
-    display: flex;
+  display: flex;
 }
-
-.logo {
-    flex: 33.33%;
-    padding: 10px;
-}
-
 .logos img {
-    border-radius: 20%;
+  border-radius: 20%;
+}
+.logos .logo {
+  flex: 33.33%;
+  padding: 10px;
+}
+.logos .logo:nth-child(2) {
+  transition-delay: 200ms;
+}
+.logos .logo:nth-child(n) {
+  transition-delay: 300ms;
+}
+.logos .logo:nth-child(n) {
+  transition-delay: 400ms;
 }
 
-.logo:nth-child(2){
-    transition-delay: 200ms;
-}
-.logo:nth-child(){
-    transition-delay: 300ms;
-}
-
-.logo:nth-child(){
-    transition-delay: 400ms;
-}
-
-.latetext:nth-child() {
-    transition-delay: 2s;
+.latetext:nth-child(n) {
+  transition-delay: 2s;
 }
 
 .bottomdiv {
-    background: #000000cb;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
-    margin: 0 auto;
-    margin-top: 1%;
+  background: rgba(0, 0, 0, 0.7960784314);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  margin: 0 auto;
+  margin-top: 1%;
 }
 
-.icon img{
-    position: relative;
-    width: 30px;
-    height: 30px;
-    margin-left: 15px;
-    margin: 10px;
-}
+.icon img {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  margin-left: 15px;
+  margin: 10px;
+}/*# sourceMappingURL=style.css.map */
