--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Comme:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Titan+One");
 body {
   background-color: #131316;
   color: #ecece9;
@@ -24,6 +25,33 @@ h3::selection {
 ::selection {
   background-color: #ecece9;
   color: #131316;
+}
+
+.light-mode {
+  background-color: #ecece9;
+  color: #131316;
+}
+.light-mode h3::-moz-selection {
+  background: rgba(0, 0, 0, 0.137);
+}
+.light-mode h3::selection {
+  background: rgba(0, 0, 0, 0.137);
+}
+.light-mode ::-moz-selection {
+  background-color: #131316;
+  color: #ecece9;
+}
+.light-mode ::selection {
+  background-color: #131316;
+  color: #ecece9;
+}
+
+.light-mode::-moz-selection {
+  background: #131316;
+}
+
+.light-mode::selection {
+  background: #131316;
 }
 
 .cursor {
@@ -98,17 +126,13 @@ section {
   padding: 10px;
 }
 .logos .logo:nth-child(2) {
+  transition-delay: 100ms;
+}
+.logos .logo:nth-child(n) {
   transition-delay: 200ms;
 }
 .logos .logo:nth-child(n) {
   transition-delay: 300ms;
-}
-.logos .logo:nth-child(n) {
-  transition-delay: 400ms;
-}
-
-.latetext:nth-child(n) {
-  transition-delay: 2s;
 }
 
 .bottomdiv {
@@ -121,10 +145,22 @@ section {
   margin-top: 1%;
 }
 
-.icon img {
+.icon button {
+  background-color: transparent;
+  border: none;
+}
+.icon button .light {
   position: relative;
   width: 30px;
   height: 30px;
-  margin-left: 15px;
   margin: 10px;
+  right: 150%;
+}
+.icon .links {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  margin-right: 15px;
+  margin: 10px;
+  left: 85%;
 }/*# sourceMappingURL=style.css.map */
