--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Comme:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Titan+One');
 $bone: #ecece9;
+$bck: #131316;
 body {
-    background-color: #131316;
+    background-color: $bck;
     color: $bone;
     font-family: 'Comme', sans-serif;
     padding: 0;
@@ -15,8 +17,26 @@ h3::selection {
 
 ::selection {
     background-color: $bone;
-    color: #131316;
+    color: $bck;
 }
+
+.light-mode {
+    background-color: $bone;
+    color: $bck;
+
+        h3::selection{
+            background: rgba(0, 0, 0, 0.137);
+        }
+
+        ::selection {
+            background-color: $bck;
+            color: $bone;
+        }
+  }
+
+.light-mode::selection{
+    background:#131316
+  }
 
 .cursor {
     position: fixed;
@@ -105,20 +125,16 @@ section {
         padding: 10px;
     }
     .logo:nth-child(2){
+        transition-delay: 100ms;
+    }
+    .logo:nth-child(n){
         transition-delay: 200ms;
     }
     .logo:nth-child(n){
         transition-delay: 300ms;
     }
-    .logo:nth-child(n){
-        transition-delay: 400ms;
-    }
     
 
-}
-
-.latetext:nth-child(n) {
-    transition-delay: 2s;
 }
 
 .bottomdiv {
@@ -131,10 +147,30 @@ section {
     margin-top: 1%;
 }
 
-.icon img {
-    position: relative;
-    width: 30px;
-    height: 30px;
-    margin-left: 15px;
-    margin: 10px;
+.icon {
+    button {
+        background-color: transparent;
+        border: none;
+        .light {
+        position: relative;
+        width: 30px;
+        height: 30px;
+        margin: 10px;
+        right: 150%;
+        }
+    }
+    .links{
+        position: relative;
+        width: 30px;
+        height: 30px;
+        margin-right: 15px;
+        margin: 10px;
+        left: 85%;
+    }
+
+
+    
+    
 }
+
+
