--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ main {
   display: inline;
   position: absolute;
   left: -999px;
-  transition: var(--transition-speed);
+  transition: 600ms ease;
 }
 
 .navbar:hover .logo svg {
@@ -68,6 +68,7 @@ main {
   position: fixed;
   background-color: var(--bg-primary);
   transition: width 200ms ease;
+  z-index: 9999;
 }
 
 .navbar-nav {
@@ -92,6 +93,19 @@ main {
   display: flex;
   align-items: center;
   height: 5rem;
+  color: var(--text-primary);
+  text-decoration: none;
+  filter: grayscale(100%) opacity(0.7);
+  transition: var(--transition-speed);
+}
+
+button {
+  display: flex;
+  align-items: center;
+  height: 5rem;
+  width: 100%;
+  background: transparent;
+  border: none;
   color: var(--text-primary);
   text-decoration: none;
   filter: grayscale(100%) opacity(0.7);
@@ -262,36 +276,6 @@ section {
   transition-delay: 300ms;
 }
 
-.bottomdiv {
-  background: rgba(0, 0, 0, 0.7960784314);
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 50px;
-  margin: 0 auto;
-  margin-top: 1%;
-}
-
-.icon button {
-  background-color: transparent;
-  border: none;
-}
-.icon button .light {
-  position: relative;
-  width: 30px;
-  height: 30px;
-  margin: 10px;
-  right: 150%;
-}
-.icon .links {
-  position: relative;
-  width: 30px;
-  height: 30px;
-  margin-right: 15px;
-  margin: 10px;
-  left: 85%;
-}
-
 @media only screen and (max-width: 600px) {
   .navbar {
     bottom: 0;
@@ -322,6 +306,7 @@ section {
   }
   .navbar:hover .link-text {
     display: inline;
+    transition: var(--transition-speed);
   }
   .navbar:hover .logo svg {
     margin-left: 11rem;
@@ -329,6 +314,7 @@ section {
   .navbar:hover .logo-text {
     margin-left: 10%;
     left: 0px;
+    transition: 600ms ease;
   }
 }
 .dark {
