--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 }
 
 body {
-  background-color: #131316;
-  color: #ecece9;
+  background-color: var(--bg-secondary);
+  color: var(--text-secondary);
   font-family: "Comme", sans-serif;
   padding: 0;
   margin: 0;
@@ -24,11 +24,11 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  background: #131316;
+  background: var(--bg-secondary);
 }
 
 body::-webkit-scrollbar-thumb {
-  background: #ecece9;
+  background: var(--text-secondary);
 }
 
 main {
@@ -169,7 +169,6 @@ h3::selection {
 }
 
 .light-mode {
-  background-color: #ecece9;
   color: #131316;
 }
 .light-mode h3::-moz-selection {
@@ -258,6 +257,7 @@ section {
 }
 .logos {
   display: flex;
+  background-color: transparent;
 }
 .logos img {
   border-radius: 20%;
